stylesheets/collection.css
.body-wrapper {
  width: 100%;
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  margin-top: 150px;
  gap: 10px;
}
h1 {
  width: 100%;
  position: relative;
  text-align: center;
  font-size: 3.3em;
}
.body-wrapper p {
  width: 400px;
  text-align: center;
  justify-content: center;
}
.projects-wrapper {
  margin-top: 70px;
  height: calc(100vh - 150px - 70px - 200px);
  padding: 0;
  box-sizing: border-box;
  display: flex;
  gap: 50px;
  overflow-x: visible;
  scrollbar-width: none;
  align-items: center;
}
.project {
  border-radius: 30px;
  aspect-ratio: 2/3;
  position: relative;
  height: 100%;
  cursor: pointer;
}
.project img {
  width: 100%;
  height: 100%;
  object-fit: cover;
  border-radius: 30px;
  z-index: 0;
  position: relative;
}
.project-overlay {
  position: absolute;
  top: 0;
  width: 100%;
  height: 100%;
  background-color: rgba(0, 0, 0, 0.3);
  z-index: 1;
  opacity: 0;
  border-radius: 30px;
  transition: all 0.3s ease;
}
.project-overlay h2 {
  z-index: 2;
  font-size: 2em;
  padding: 25px;
  font-weight: 700;
}
.project-overlay p {
  z-index: 2;
  padding: 10px 0 0 25px;
  width: 80%;
}
.project:hover .project-overlay {
  opacity: 1;
}
.project-overlay .project-tags {
  position: absolute;
  bottom: 5%;
  text-align: center;
  width: 100%;
}
.project-tags span {
  padding: 0 15px;
}
.projects-wrapper > a {
  height: 100%;
  display: block;
}
@media(min-width:768px){
  .m-projects-wrapper, .m-project, .m-image-wrapper{
    display: none;
  }
}
/* --- MOBILE --- */
@media (max-width: 768px) {
  .projects-wrapper, .project {
    display: none;
  }
}
.m-projects-wrapper {
  width: 100vw;
}

.m-project {
  width: 100%;
  display: flex;
  flex-direction: column;
  border-bottom: 1px solid rgba(255, 255, 255, 0.1);
}

.m-project-text {
  padding: 30px 20px 20px 20px;
}

.m-project-text h2 {
  font-size: 1.6em;
  font-weight: 700;
  margin-bottom: 8px;
}

.m-project-text p {
  color: lightgrey;
  font-size: 0.95em;
}

.m-image-wrapper {
  position: relative;
  width: 100%;
}

.m-image-wrapper img {
  width: 95%;
  object-fit: cover;
  display: block;
  align-self: center;
  justify-self: center;
}

.m-project-tags {
  position: absolute;
  bottom: 5%;
  left: 50%;
  transform: translateX(-50%);
  width: 100%;
  text-align: center;

}

.m-project-tags span {
  padding: 0 10px;
  font-size: 0.85em;
  color: white;
  background: rgba(100, 100, 100, 0.5);
  padding: 6px 16px;
  border: 1px solid rgba(255, 255, 255, 0.15);
  width: fit-content;
  border-radius: 25px;
  margin: 0 6px;
}

